[Spring 장바구니 - 2단계] 더즈(이동규) 미션 제출합니다. (#101)
* refactor: 매직넘버 상수 처리

* refactor: ExceptionResponse으로 에러 메시지 반환

* refactor: 커스텀 예외를BusinessException을 상속 받도록 처리

* refactor: Customer가 생성될 때 인코딩 전략을 받아 암호화하도록 변경

* fix: CORS preflight request 요청 허용

* dcos: 장바구니 추가 API 명세 추가

* refactor: 사용하지 않을 상품 추가, 삭제 메서드 삭제

* refactor: Product 관련 기능 리팩터링

* feat: 장바구니 상품 추가 기능 구현

* feat: 특정 Customer의 장바구니 조회 기능 구현

* refactor: controller 테스트 중복 제거

* feat: 이미 있는 장바구니 상품을 넣으려고 하면 기존 장바구니 상품이 새로운 수량으로 대체되는 기능 구현

* feat: 장바구니 상품 삭제 기능 구현

* feat: 주문하기 기능 구현

* feat: 주문 단건 조회 기능 구현

* fix: 회원 정보 수정 API 변경 반영 (닉네임, 비밀번호 나눠서 변경)

* refactor: 프론트와 협의한 에러코드 반영

* refactor: 사용하지 않는 파일 삭제

* refactor: Product 더미 데이터 추가

* refactor: mysql 의존성 추가

* refactor: sql 소문자로 변경

* test: 도메인 test 추가

* refactor: Pattern 객체 상수 처리하여 재사용

* refactor: allowedOrigins 설정

* refactor: 원시값 포장

* refactor: 메서드명 동사로 변경